--- a/style.css
+++ b/style.css
@@ -1,3 +1,41 @@
+@font-face {
+    font-family: zen-dots;
+    src: url(./ZenDots-Regular.ttf);
+}
+
 :root {
     
+}
+
+body {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    background-color: rgb(51, 14, 0);
+}
+.wrapper {
+    display: flex;
+    height: 86vh;
+    background-color: beige;
+}
+
+#hero-head {
+    font-family: zen-dots;
+}
+
+#hero-image {
+    max-width: 100%;
+    max-height: 100%;
+}
+.field {
+    border-radius: 5px;
+}
+
+.field:valid {
+    border: 2px solid green;
+}
+
+.field:invalid {
+    border: 2px solid red;
 }
