--- a/style.css
+++ b/style.css
@@ -4,30 +4,55 @@
 }
 
 :root {
-    
+    background-color: rgb(0, 11, 20);
+    --highlight-color: #187cc9;
 }
 
 body {
     height: 100vh;
     width: 100vw;
     display: flex;
-    align-items: center;
-    background-color: rgb(51, 14, 0);
+    margin: 0;
+    padding: 0;
 }
-.wrapper {
+
+div.left {
+    height: 100vh;
+    width: 45%;
+    background-image: url(./images/owl.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
     display: flex;
-    height: 86vh;
-    background-color: beige;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-#hero-head {
+div.right {
+    height: 100vh;
+    width: 55%;
+}
+
+div#logo-container {
+    background-color: rgba(24, 124, 201, 0.4);
+    font-size: 26px;
     font-family: zen-dots;
+    display: flex;
+    justify-content: center;
 }
 
-#hero-image {
-    max-width: 100%;
-    max-height: 100%;
+img#logo {
+    max-height: 100px;
+    max-width: 100px;
 }
+
+div#credit-container {
+    background-color: rgba(24, 124, 201, 0.4);
+    font-family: zen-dots;
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 8px;
+}
+
 .field {
     border-radius: 5px;
 }
@@ -38,4 +63,81 @@ body {
 
 .field:invalid {
     border: 2px solid red;
+}
+
+#form-content {
+    display: flex;
+    flex-direction: column;
+    color: beige;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+}
+
+fieldset#description {
+    height: 45vh;
+    border: none;
+}
+
+fieldset#description>h2 {
+    position: relative;
+    top: 10rem;
+}
+
+fieldset#enter-info {
+    height: 30vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    border: none;
+    background-color: rgb(0, 18, 32);
+    box-shadow: 4px 5px 12px 6px var(--highlight-color);
+    position: relative;
+    right: .6rem;
+}
+
+fieldset#enter-info>legend {
+    position: relative;
+    top: 1rem;
+    font-size: 19px;
+    font-weight: 700;
+}
+
+fieldset#submit {
+    height: 20vh;
+    border: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+fieldset#submit>button {
+    width: 200px;
+    height: 50px;
+    font-size: 16px;
+    font-weight: 700;
+    font-family: zen-dots;
+    background-color: rgb(0, 18, 32);
+    border-radius: 200px;
+    color: aqua;
+    box-shadow: 2px 2px 12px 2px var(--highlight-color);
+}
+
+div#row-one {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+div#row-two {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+div#row-three {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.label {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
